2008-02-28  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp-fl-parser.c (fl_parser_start_node_cb):
	Fix the content-type of directories (inode/directory, not
	x-directory/normal as in gnome-vfs)
	Set file icons from the content-type

	* daemon/gvfsbackendobexftp.c (_change_directory):
	Add a FIXME, trying to change to a non-existant directory
	errors out with "permission denied", which isn't the case

	(_query_file_info_helper): set the right content-type and icon
	for the root folder

	(is_connected), (do_mount): Wait until we're connected to exit from
	do_mount()

	(do_open_for_read): Fix a crash when opening an inexistant file for
	read

2008-02-28  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_error_set_from_response),
	(file_info_query), (do_query_info):
	Set sane error messages for ftp error codes.
	Also remove some excessive debug messages.

2008-02-28  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_mount):
	fix typo (thanks Andre)

2008-02-28  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_sendv),
	(ftp_connection_send), (do_start_write), (do_create), (do_append),
	(do_replace), (g_vfs_backend_ftp_class_init):
	implement append

2008-02-28  Benjamin Otte  <otte@gnome.org>

	gcc warning fixes to be able to compile with -Werror:
	* daemon/gvfsbackendburn.c:
	mark virtual_node_ref as unused, because it is
	* test/benchmark-common.c: (benchmark_timeout):
	signal handlers take an int argument.

2008-02-28  Benjamin Otte  <otte@gnome.org>

	* configure.ac:
	list FTP in configuration summary, too

2008-02-28  Benjamin Otte  <otte@gnome.org>

	* daemon/Makefile.am:
	* daemon/gvfsbackendftp.c:
	* daemon/gvfsbackendftp.h:
	drop my current FTP code and continue development in here. Should make
	testing easier for adventurous people.

2008-02-28  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp.c (do_query_info): Add
	missing mutex unlock, duh!
