@@ -1,3 +1,11 @@
+2008-02-28  Alexander Larsson  <alexl@redhat.com>
+
+        * client/gdaemonvolumemonitor.c:
+        (mount_added):
+        (mount_removed):
+	Emit signals outside of the lock to avoid
+	deadlocks (#519250)
+
 2008-02-28  Bastien Nocera  <hadess@hadess.net>
 
 	* daemon/gvfsbackendobexftp-fl-parser.c (fl_parser_start_node_cb):
